# tg-message-context

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/ai/: gemini_client.py  groq_client.py  openai_client.py
src/bot/: handlers.py
src/db/: database.py  models.py  repository.py
src/models/: message.py
src/services/: context_service.py
